# talend_rebates-fees_project

./: LICENSE  README.md  pyproject.toml  setup.cfg
trf_project/: goodbye.py  study.py
trf_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
