[metadata]
name = trf_project
version = 0.1.2
author = svmelny
description = for learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SvitlaMelnychuk/talend_rebates-fees_project

classifiers = 
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
#include_package_data = True